--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 .sc-ion-searchbar-md-h {
     --box-shadow: none !important;
     padding: 0px !important;
@@ -48,7 +51,7 @@ span {
 }
 
 .padre {
-    width: 100%;
+    width: 100%;                    
     height: 80%;
     display: flex;
     flex-direction: row;
@@ -89,26 +92,6 @@ span {
     z-index: 0;
 }
 
-.magnifying {
-    padding: 10.5px;
-    border-radius: 100%;
-    color: #fff;
-    background-color: #01dfb8;
-    margin-right: 10px;
-}
-
-form {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-  }
-  
-  form > ion-select {
-    width: 40%;
-  }
-
   .empty {
     display: flex;
     flex-direction: column;
@@ -131,86 +114,91 @@ form {
     font-size: 5em;
     color: #d6d2d1;
   }
+
 // filtro 
-  .filter_place {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    margin: -30px auto 10px auto;
-    position: relative;
-    z-index: 50;
-    width: 90%;
-    background-color: rgb(240, 240, 240);
-    padding: 16px;
-    border-radius: 60px;
-  }
-  
-  ion-label {
-    font-weight: bold;
-    font-family: "Poppins";
-    color: rgb(161, 161, 161);
-    font-size: 0.8em;
-  }
-  
-  .form_filter {
-    display: flex;
-    flex-direction: column;
-    margin: 0 5% 5px 5%;
-    z-index: 100;
-    background-color: #fff;
-    border-radius: 16px;
-    -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 9px -1px rgba(161, 141, 141, 0.75);
-  }
-  
-  .filter_name {
-    padding: 15px 0 15px 15px;
-    font-weight: bold;
-    width: 100%;
-    font-size: 0.95em;
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-  }
-  
-  .filter_list {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-top: 2px solid #ddd;
-    width: 100%;
-    height: 35px;
-    font-size: 0.9em;
-    font-family: "Poppins", sans-serif;
-    color: rgba(116, 108, 108, 0.75);
-  }
-  
-  .filter_type {
-    border-top: 2px solid #ddd;
-    width: 100%;
-  }
-  
-  .icon_arrow {
-    float: right;
-    margin-right: 15px;
-  }
-  
-  .type_border > .last:last-child {
-    border-bottom-left-radius: 16px !important;
-    border-bottom-right-radius: 16px !important;
-  }
-  
-  .list_type {
-    border-bottom-left-radius: 16px !important;
-    border-bottom-right-radius: 16px !important;
-  }
-  
-  .open_acordeon {
-    color: #fc67ff
-  }
-  
-  ion-radio {
-    --color-checked: #fc67ff;
-  }
-  
+.filter_place {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: -30px auto 10px auto;
+  position: relative;
+  z-index: 50;
+  width: 90%;
+  background-color: rgb(240, 240, 240);
+  padding: 16px;
+  border-radius: 60px;
+}
+
+ion-label {
+  font-weight: bold;
+  font-family: "Poppins";
+  color: rgb(161, 161, 161);
+  font-size: 0.8em;
+}
+
+.form_filter {
+  display: flex;
+  flex-direction: column;
+  margin: 0 5% 5px 5%;
+  z-index: 100;
+  background-color: #fff;
+  border-radius: 16px;
+  -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 9px -1px rgba(161, 141, 141, 0.75);
+}
+
+.filter_name {
+  padding: 15px 0 15px 15px;
+  font-weight: bold;
+  width: 100%;
+  font-size: 0.95em;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+.filter_list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-top: 2px solid #ddd;
+  width: 100%;
+  height: 35px;
+  font-size: 0.9em;
+  font-family: "Poppins", sans-serif;
+  color: rgba(116, 108, 108, 0.75);
+  margin: 0 !important;
+}
+
+.filter_type {
+  border-top: 2px solid #ddd;
+  width: 100%;
+}
+
+.icon_arrow {
+  float: right;
+  margin-right: 15px;
+}
+
+.location_border > .last:last-child {
+  border-bottom-left-radius: 16px !important;
+  border-bottom-right-radius: 16px !important;
+}
+
+.list_location {
+  border-bottom-left-radius: 16px !important;
+  border-bottom-right-radius: 16px !important;
+}
+
+.open_acordeon {
+  color: #fc67ff;
+}
+
+ion-radio {
+  --color-checked: #fc67ff;
+}
+
+.list-md {
+  padding: 0 !important;
+}
