--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -81,7 +81,7 @@
         <h6 class="interes">Te puede interesar</h6>
         <div class="divf">
             <div class="sugerencia" *ngFor="let s of sug_2">
-                <a href="places/{{s.id}}" class="sug">
+                <a href="/places/{{s.id}}" class="sug">
                     <img class="sug_img" src="{{ s.imagenPrincipal }}" alt="">
                 </a>
                 <div class="infoSug">
