--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -41,7 +41,7 @@
           <div *ngIf="isOpenLocation">
             <ion-list class="list_location">
               <ion-radio-group
-                (ionChange)="filterEat()"
+                (ionChange)="filterSleep()"
                 formControlName="localidad"
                 class="location_border"
               >
@@ -52,12 +52,12 @@
                 <ion-item
                   class="filter_list last"
                   lines="none"
-                  *ngFor="let loc of localidades"
+                  *ngFor="let loc of locationActive"
                 >
-                  <ion-text>{{ loc }}</ion-text>
+                  <ion-text>{{ loc.localidad }}</ion-text>
                   <ion-radio
                     slot="end"
-                    value="{{ loc }}"
+                    value="{{ loc.localidad }}"
                   ></ion-radio>
                 </ion-item>
               </ion-radio-group>
