--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -22,8 +22,7 @@
     <app-text-to-speech [descripcion]="place.descripcion" ></app-text-to-speech>
 
     <ion-text>
-        <div class="texto" id="all-description" [innerHTML]="place.descripcion">
-        </div>
+        <div class="texto" id="all-description" [innerHTML]="place.descripcion"></div>
     </ion-text>
 
     <ion-grid>
