limpiarTexto: Se agrega innerHTML a la tag que muestra la descripcion del evento. Texto se muestra normal.

--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -47,7 +47,7 @@
         </div>
       </div>
     </div>
-    <div class="descripcion" id="description-event">
+    <div class="descripcion" id="description-event" [innerHTML]="descripcion">
       {{descripcion}}&nbsp;<a *ngIf="descripcion.length > 250">Ver más</a>
     </div>
   </div>
