--- a/src/app/pages/home-menu/home-menu.page.scss
+++ b/src/app/pages/home-menu/home-menu.page.scss
@@ -22,6 +22,7 @@
   flex-direction: column;
   color: #ffffff;
   font-weight: bold;
+  font-family: 'Poppins', sans-serif;
 }
 
 .div__menu > .div__menu-izq {
