--- a/src/app/pages/place-selected/place-selected.page.scss
+++ b/src/app/pages/place-selected/place-selected.page.scss
@@ -7,6 +7,10 @@
   ion-title {
     margin-left: 3%;
   }
+
+  #nombre {
+    font-family: 'Poppins', sans-serif;
+  }
   
   .diva {
     width: 100%;
@@ -21,6 +25,7 @@
   
   .divc {
     width: 100%;
+    height: auto;
     background-color: var(--ion-color-light);
   }
   
@@ -59,11 +64,19 @@
   
   .text {
     font-size: 12px;
-    margin: 0 4% 0 4%;
+    margin: 0 4% 0 4% !important;
     font-family: Barlow;
     padding-bottom: 2%;
+    font-family: 'Poppins', sans-serif;
+    display: inline-block;
   }
-  
+
+  .verMas {
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+    display: inline-block;
+  }
+
   #mapaBox {
     height: 100%;
     width: 100%;
@@ -105,6 +118,7 @@
     font-weight: 400;
     color: #00dea5;
     height: 3%;
+    font-family: 'Poppins', sans-serif;
   }
   
   .infoSug {
