--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -31,8 +31,13 @@
 }
 
 ion-label {
-  font-family: "Barlow";
+  font-family: 'Poppins', sans-serif;
   font-size: 11pt;
+}
+
+#place-title {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400 !important;
 }
 
 .card-content-md {
@@ -71,6 +76,8 @@ ion-label {
   float: left;
   margin-left: 3%;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400 !important;
 }
 
 .sliderPrimero,
